# tf_s3backend_migrator

./: .gitignore  Makefile  README.md  pyproject.toml
src/tf_s3backend/: algo.py  analyze.py  cli.py  migrate.py  psudo_workspaces.py  queries.py
src/tf_s3backend/templ/: config.tf
src/tf_s3backend_migrator/: cli.py  migrate.py  psudo_workspaces.py
tests/: test_algo.py  test_psudo_wrkspc.py  test_queries.py
tests/fixture/gen1/: Makefile
tests/fixture/gen1/prod/: init.tfvars  input.tfvars
tests/fixture/gen1/stage/: init.tfvars  input.tfvars
tests/fixture/gen1/test/: init.tfvars  input.tfvars
tests/fixture/gen1/tf-code/: state.tf
tests/fixture/gen2/: Makefile  input-master.test.tfvars  input-prod.tfvars  input-stage.tfvars  input-test.tfvars
tests/fixture/gen2/tf-code/: backend.tf
tests/fixture/gen2b/: Makefile
tf_s3backend_migration/: __main__.py
tf_s3backend_migration/tree_sitter_utils/: parser.py  parsers.py
tf_s3backend_migrator/: __main__.py  aws.py  cli.py  core.py  psudo_workspaces.py  queries.py
tf_s3backend_migrator/templ/: config.tf
tf_s3backend_migrator/ts_utils/: parsers.py
