[tool.poetry]
name = "tf-s3backend-migration"
version = "0.1.0"
description = ""
authors = ["kjetil midtlie <kjetil.midtlie@gmail.com>"]
readme = "README.md"
packages = [{ include = "tf_s3backend_migration" }]

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.20.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
