[tool.poetry]
name = "tf-s3backend-migrator"
version = "0.1.0"
description = ""
authors = ["kjetil midtlie <kjetil.midtlie@gmail.com>"]
readme = "README.md"
packages = [{ include = "tf_s3backend_migrator" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
ts-language-collection = {git = "https://github.com/dynnamitt/py-ts-languange-collection.git"}
rich = "^12.6.0"
boto3 = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
