[tool.poetry]
name = "tf-s3backend"
version = "0.3.0"
description = ""
authors = ["kjetil midtlie <kjetil.midtlie@gmail.com>"]
readme = "README.md"
packages = [{include = "tf_s3backend",from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
ts-language-collection = {git = "https://github.com/dynnamitt/py-ts-languange-collection.git", rev = "next-hcl"}
rich = "^12.6.0"
boto3 = "^1.25.2"


[tool.poetry.scripts]
tf_s3 = "tf_s3backend.cli:cli_group"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
